--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: linear-gradient(rgba(0,0,0,0.60), rgba(0,0,0,0.60)), url('/bg.jpg') ;
+  background-size: cover; */
+
 }
-button {background-color: lightblue; border:none; height:60px; color: white; width:300px; font-size: 30px;}
+h3{
+  color: black
+}
+button {background-color: #4C6793; border:none; height:100px; color: white; width:300px; font-size: 30px; margin-bottom: 25px;}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.recipes{display: flex; justify-content: space-between; flex-wrap: wrap;}
+
+.recipes{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: black;
+}
+.topButton{
+  background-color: #8BBCCC; border:none; height:110px; color: white; width:300px; font-size: 30px;margin-bottom: 3px;
+}
+.ingredients{
+  background-color:white;
+  position: absolute;
+
+}
+.inputAndTitle{
+  text-align: center;
+  margin-bottom: 20px;
+}
+input{
+  height: 50px;
+  font-size: 30px;
+}
+
 /* /////////////////////////// */
