--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,18 @@ code {
 }
 .inputAndTitle{
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 input{
-  height: 50px;
-  font-size: 30px;
+  height: 40px;
+  font-size: 26px;
+  margin-top: -20px;
 }
-
+h1{
+  color:#4C6793;
+  font-size: 60px;
+}
+.labelForIngredients{
+  text-decoration: underline;
+}
 /* /////////////////////////// */
