--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
-body {
+/* body {
   margin: 10px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: linear-gradient(rgba(0,0,0,0.60), rgba(0,0,0,0.60)), url('/bg.jpg') ;
-  background-size: cover; */
+
 
 }
 h3{
@@ -47,5 +46,77 @@ h1{
 }
 .labelForIngredients{
   text-decoration: underline;
-}
+} */
 /* /////////////////////////// */
+
+
+
+
+body {
+  margin: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+
+}
+h3{
+  color: black
+}
+button {background-color: #4C6793; border:none; height:100px; color: white; width:300px; font-size: 30px; margin-bottom: 25px;}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.recipes{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: black;
+}
+.topButton{
+  background-color: #8BBCCC; border:none; height:110px; color: white; width:300px; font-size: 30px;margin-bottom: 3px;
+}
+.ingredients{
+  background-color:white;
+  position: absolute;
+
+}
+.inputAndTitle{
+  text-align: center;
+  margin-bottom: 60px;
+}
+input{
+  height: 40px;
+  font-size: 26px;
+  margin-top: -20px;
+  outline: none;
+
+}
+
+h1{
+  color:#4C6793;
+  font-size: 60px;
+}
+::placeholder{
+  color: black
+}
+.labelForIngredients{
+  text-decoration: underline;
+}
+h2 {
+  color: #4C6793
+}
+
+.searchButton{
+  height: 60px;
+}
+
+.inputButton {
+  height: 46px;
+  font-size: 26px;
+  margin-left: 10px;
+}
